# xue_hua_media_compression

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/flutter_rust_bridge/xue_hua_media_compression/: XueHuaMediaCompressionPlugin.java
android/src/main/kotlin/com/flutter_rust_bridge/xue_hua_media_compression/: XueHuaMediaCompressionPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/xue_hua_media_compression_example/: MainActivity.kt
example/integration_test/: facade_seam_test.dart  simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: xue_hua_media_compression.podspec
lib/: xue_hua_media_compression.dart
lib/src/: media_compression.dart  options.dart  video_input.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: image.dart  media.dart  traits.dart  traits.freezed.dart
lib/src/rust/api/platform/: apple.dart
linux/: CMakeLists.txt
macos/: xue_hua_media_compression.podspec
rust/: Cargo.toml  build.rs
rust/src/: android_init.rs  file_input.rs  frb_generated.rs  image.rs  lib.rs  route.rs  video.rs  video_bitstream.rs  video_encode.rs  video_frame_collector.rs  video_input.rs  video_mp4.rs  video_scale.rs
rust/src/api/: image.rs  media.rs  mod.rs  traits.rs  video.rs  video_common.rs
rust/src/api/platform/: android.rs  android_context.rs  android_file.rs  apple.rs  apple_stub.rs  linux.rs  mod.rs  windows.rs
rust/src/platform/: android_file.rs  mod.rs  windows.rs
rust/src/platform/android/: extractor.rs  mod.rs  ndk.rs  pipeline.rs
rust/src/platform/apple/: encode.rs  metadata.rs  mod.rs  reader.rs
rust/src/platform/linux/: demux.rs  mod.rs  vaapi.rs
test/: facade_mock_seam_test.dart  media_compression_test.dart
test/support/: mock_rust_lib_api.dart
windows/: CMakeLists.txt
